# MMODCNN_SpringEdition

./: CMakeLists.txt  README.md  build_windows.bat
MMODCNN_SpringEdition_Test/: MMODCNNSE.h  MMODCNN_SpringEdition_Test.sln  MMODCNN_SpringEdition_Test.vcxproj  main.cpp  names.txt
MMODCNN_SpringEdition_Train/: Readme.md
dev/: sample_test.cpp  sample_train.cpp
src/: MMODCNNSE_model.h  MMODCNNSE_test.cpp  MMODCNNSE_test.h  MMODCNNSE_train.cpp  MMODCNNSE_train.h
